# postprocessing-su2-surface

./: .gitignore  .project  CMakeLists.txt  PPSU2Surface.cxx  README.md  SimplePointsReader.cxx  make.py  make_command.sh  post.cfg  pressure-side.txt  pressure-side_1.vtk  vtkpoint.h
files/: leadpoint.txt  pressure-side_1.vtk  suction-side_1.vtk
